--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-		<!-- Your code goes here-->
-
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
-</body>
+    <head>
+        <title>New Experiment</title>
+    	<frameset rows = "20%,80%">
+        	<frameset cols="23%,77%" border color ="red">
+        		<frame name = "top" src = "logo_composition.html" />
+        		</frame>
+        		<frame name = "right" src = "heading_composition.html" />
+        		</frame>
+    		</frameset>
+        	<frame name = "main" src = "newdesign1.html" /></frame>
+    	</frameset>
+     </head>
 </html>
