--- a/experiment/simulation/logo_composition.html
+++ b/experiment/simulation/logo_composition.html
@@ -9,6 +9,6 @@ body{
 	<title>logo</title>
 </head>
 <body>
-	<img src="C:\Users\Asha vijayan\OneDrive - Amrita university\vlab\Compbio\vlab_new_expt\DNA composition\simulator\logo.png" width="300" height="100">
+	<img src="logo.png" width="300" height="100">
 </body>
 </html>
