--- a/experiment/simulation/heading_composition.html
+++ b/experiment/simulation/heading_composition.html
@@ -25,7 +25,7 @@
 </head>
 <div class='at-container'>
 	
-	<div class='at-item' >Sequence Composition of DNA</div>
+	<div class='at-item' >Composition of DNA Sequence</div>
 </div>
 
 </body>
