--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -127,7 +127,7 @@
         <div class='at-container'>
             <img src="images/logo.png" width="300" height="100" style="margin-left:-5%;">
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <div class='at-item' >Composition of DNA </div>
+            <div class='at-item' >Composition of DNA Sequence</div>
         </div>
         <br>
         <div id="testbutton" align="center">
